# pypolsys

./: .f2py_f2cmap  .gitignore  LICENSE  MANIFEST.in  README.md  calltest.f90  meson.build  pyproject.toml  setup.py
.github/workflows/: CI-build-release.yml  ci-ubuntu.yml  ci-windows.yml
pypolsys/: __init__.py  test.py  utils.py  version.py
pypolsys/801/: polsys_plp.f90
pypolsys/examples/data/: toy_model.npz
pypolsys/src/: polsys.pyf  wrapper.f90
