[build-system]
build-backend = 'mesonpy'
requires = ['meson-python>=0.15.0', 'cython', 'numpy']

[project]
name = 'pypolsys'
dynamic = ["version"]
description = "A python wrapper to `POLSYS_PLP` fortran90 package from Layne T. Watson, Steven M. Wise, Andrew J. Sommese, August, 1998."
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.5'
authors = [
  {name = "B. Nennig", email = 'benoit.nennig@isae-supmeca.fr'},
]
dependencies = [
  "numpy",
  "scipy",
  "sympy"
]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  
  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
]

[project.urls]
homepage = "https://github.com/nennigb/pypolsys"

